--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:generate": "pnpmx prisma generate",
     "db:push": "pnpmx prisma db push",
     "db:migrate": "pnpmx prisma migrate dev",
-    "db:studio": "pnpmx prisma studio"
+    "db:studio": "pnpmx prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "postcss": "^8.5.6",
     "prisma": "^6.16.2",
     "tailwindcss": "^4.1.13",
+    "tsx": "^4.19.2",
     "typescript": "^5.9.2"
   }
 }
