--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
+    "postbuild": "npm run db:seed",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "pnpx prisma generate",
