Update Vercel Build Instructions

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "postbuild": "npm run db:seed",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "pnpx prisma generate",
-    "db:push": "pnpx prisma db push",
-    "db:migrate": "pnpx prisma migrate dev",
-    "db:studio": "pnpx prisma studio",
+    "db:generate": "npx prisma generate",
+    "db:push": "npx prisma db push",
+    "db:migrate": "npx prisma migrate dev",
+    "db:studio": "npx prisma studio",
     "db:seed": "tsx prisma/seed.ts",
     "postinstall": "prisma generate"
   },
